[BUG #7717] On iOS7 the headers are partially covered by the browser's chrome in landscape view
* Merge with Branch_3_0_x
* Setting window.scrollTo(0,0) on orientationChange event.
* Setting height of the root element to window.innerHeight because document.clientHeight is calculated 20px too big.
* Adding a lower page offset for drawers about 20px.

--- a/framework/source/resource/qx/mobile/css/android.css
+++ b/framework/source/resource/qx/mobile/css/android.css
@@ -75,6 +75,12 @@ img.no-content {
   -moz-transform: translate3d(0, 10000px, 0);
   transform: translate3d(0, 10000px, 0); }
 
+.root.ios .master-detail-master > * {
+  padding-bottom: 20px; }
+
+.ios .slider, .slider > div:after {
+  -webkit-backface-visibility: hidden; }
+
 input::-webkit-input-placeholder {
   line-height: normal; }
 
@@ -833,9 +839,6 @@ input, select, .text-area {
 
 .spinnerContainer .label, .spinnerContainer img {
   display: inline; }
-
-.ios .slider {
-  -webkit-backface-visibility: hidden; }
 
 .slider {
   -webkit-border-radius: 20px;
